Fix: add to ContextHolder principal class user